[package]
name = "injector"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.60.0", features = [
  "Win32_System_Memory",
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader"
] }
goblin = "0.10.0"
scroll = "0.13.0"
